Add folder structure to the project

--- a/react-app-package/index.html
+++ b/react-app-package/index.html
@@ -18,6 +18,6 @@
     </div>
 
     <!-- App.js becomes a module and not a normal file which lets us to import/export inside the JS file -->
-    <script type="module" src="./App.js"></script>
+    <script type="module" src="./src/App.js"></script>
   </body>
 </html>
